<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/buttonHotel"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:drawableTop="@drawable/round_hotel_white_36dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:shadowColor="@color/colorBlack"
        android:text="@string/buttonHotel"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toStartOf="@+id/buttonCultur"
        app:layout_constraintTop_toTopOf="@+id/SliderDots"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/buttonGastronomy"
        android:textSize="14dp"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:drawableTop="@drawable/round_restaurant_white_36dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:shadowColor="@color/colorBlack"
        android:text="@string/gastronomyButton"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/buttonRelax"
        app:layout_constraintTop_toBottomOf="@+id/buttonHotel" />

    <Button
        android:id="@+id/buttonCultur"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cultureButton"
        android:background="@color/colorAccent"
        android:drawableTop="@drawable/cultura_36dp"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:paddingTop="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonHotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonHotel" />

    <Button
        android:id="@+id/buttonRelax"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:drawableTop="@drawable/round_hot_tub_white_36dp"
        android:text="@string/relaxButton"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCultur" />

    <Button
        android:id="@+id/buttonFun"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:drawableTop="@drawable/svago_36dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:text="@string/funButton"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCultur"
        app:layout_constraintStart_toEndOf="@+id/buttonCultur"
        app:layout_constraintTop_toTopOf="@+id/buttonCultur"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonGreenSpace"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:drawableTop="@drawable/nature_36dp"
        android:textSize="14dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:paddingTop="12dp"
        android:text="@string/greenSpaceButton"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRelax"
        app:layout_constraintStart_toEndOf="@+id/buttonRelax"
        app:layout_constraintTop_toTopOf="@+id/buttonRelax" />

    <android.support.v4.view.ViewPager
        android:id="@+id/slideShowHome"
        android:layout_width="0dp"
        android:layout_height="166dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/SliderDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewCustom"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/slideShowHome"
        tools:layout_editor_absoluteX="0dp">

    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <FrameLayout
        android:id="@+id/fragmentView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slideShowHome"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>